# centrale_fairness_ml

./: .gitignore  README.md  explo.ipynb  main.py  pyproject.toml  run.sh
src/: bias_mitigation.py  config.py  data_processing.py  models_comparison.py  models_naive_no_race_training.py  models_naive_training.py  utils.py
src/adversarial_attacks/: evasion_attack.py  evasion_defenses.py  evasion_utils.py
src/privacy_attacks/: aia_utils.py  attribute_inference_race.py  defense_output_perturbation.py
src/training/: pipeline.py
