[project]
name = "project-compas-based"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "shap>=0.49.1",
    "xgboost>=2.1.4",
    "joblib>=1.4.2",
]
